Update and rename README.md to README.html

--- a/README.html
+++ b/README.html
@@ -1,52 +1,43 @@
-#
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <?ml version="1.0" encoding="utf-8"?></html>
 <html xmlns="https://www.w3.org/1999/xhtml" xml:lang="de"></html>
 
 <head>
-    <meta charset="utf-8">
+    	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width"/>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<!--<title> HTML; ReadMe</title> <link rel="stylesheet" href="wp-admin/css/install.css?ver=20100228" type="text/css" />-->
-   <meta name="author" content="Veronica"/>
-   <meta name="robots" content="noindex, nofollow"/>
-   <meta http-equiv="Refresh" content="5;><a href="https://www.example.org/"/>
-   <meta https-equiv="expires" content="0"/>
-<link rel="stylesheet" a href="pesticide.css">
-<base href="http://www.google.com/"></base>
-<base target="linkfenster"></base>
+   	<meta name="author" content="Veronica"/>
+   	<meta name="robots" content="noindex, nofollow"/>
+   	<meta http-equiv="Refresh" content="5;><a href="https://www.example.org/"/>
+	<meta https-equiv="expires" content="0"/><link rel="stylesheet" a href="pesticide.css">
+	<base href="http://www.google.com/"></base>
+	<base target="linkfenster"></base>
 
 <!-- target="_self" adressiert das aktuelle Fenster.-->
 <!-- target="parent" adressiert dessen Elternfenster-->
 <!-- target="_top" adressiert das Fenster auf der obersten Hierarchie-->
-<!-- target="_blank" adressiert ein neues Fenster, das mit keinem
-Namen eines anderen geoeffneten Fenster übereinstimmt--->
+<!-- target="_blank" adressiert ein neues Fenster, das mit keinem Namen eines anderen geoeffneten Fenster übereinstimmt--->
 
-<link rel="help" href="/?pagename=help" title="HELP"></link>
-<link rel="search" href="suche.html" title="Detailsuche"></link>
-<link rel="author" href="impressum.html" title="IMPRESSUM"></link>
-<link rel ="index"></link>
-<link rel="prefetch" href="tour-tag-15.html"></link>
+	<link rel="help" href="/?pagename=help" title="HELP"></link>
+	<link rel="search" href="suche.html" title="Detailsuche"></link>
+	<link rel="author" href="impressum.html" title="IMPRESSUM"></link>
+	<link rel ="index"></link>
+	<link rel="prefetch" href="tour-tag-15.html"></link>
 
 <style> type="text/css">
 <div.spezialangebot>
-{
-background-color: greenyellow;
-border:  3px solid #D0D4E4;
-border-radius: 4px;
-padding: 4px;
-}
+{background-color: greenyellow; border:  3px solid #D0D4E4; border-radius: 4px;padding: 4px;}
 </style>
+	
 <script type="text/javascript">
 funktion browser Language Status
-
-{
-if (document.getElementById()
-}
+{if (document.getElementById()}
 </script>
- <title>HTML Seitenstruktur</title>-->
+
+ <title>HTML Seitenstruktur</title>
  
 </head>
 
@@ -56,6 +47,7 @@ if (document.getElementById()
 
 <h1>HTML- Die Sprache des Web</h1>
 <h2>Html Seitenstruktur</h2>
+
 <aside>
 <p><h3></h3>HTML Grundgeruest</h2></p>
 <a href="https://twitter.com/"></a>Aufbau</a></p>
@@ -74,8 +66,7 @@ if (document.getElementById()
 
 <article>
 <address>
-<p>Gastartikel von Veronica Geringer, <a href="www.federlesung.org">
-</p>
+<p>Gastartikel von Veronica Geringer, <a href="www.federlesung.org"></p>
 </address>
 </article>
 
@@ -103,16 +94,17 @@ Es sollte nicht innerhalb von Elementen wie <section></section>,<article></artic
 
 <ul>
 	<ol>
-				<li> <a href="index.html">Startseite</a></li>
-                                <li> <a href="referenzen.html">Referenzen</a></li>
-				<li> <a href="impressum.html">Impressum</a></li>
+		<li> <a href="index.html">Startseite</a></li>
+                <li> <a href="referenzen.html">Referenzen</a></li>
+		<li> <a href="impressum.html">Impressum</a></li>
 
 
-<selektion>
+
 </ol>
 </ul>
  </nav>
  
+
                 <li>Eigenschaften</li>
         <ul>
 		</li> <!--Ende: CSS-->
@@ -127,7 +119,7 @@ Es sollte nicht innerhalb von Elementen wie <section></section>,<article></artic
         		<li>Artikel</li>
 </ol>
 	</li> <!-- Ende: Vorbereitung-->
-		<li>Ausarbeitung
+		<li>Ausarbeitung</li>
         <ol>
         	<li>Head</li>
         	<li>Body</li>
